Recommitting lost changes after reverts - Fix content-sensitive CSS to display TDS section differently depending on the # subsections present - Changes to TDS section to make it more obvious - Change to Adhesion/Chem rating blocks to make them more readable and reduce section height - Changes to material profile icons     New images     Updated CSS clasess to improve presentation     HTML updates to reference new SVG files - Beautfied HTML

--- a/css/msapp.css
+++ b/css/msapp.css
@@ -244,10 +244,9 @@ body {
      margin-bottom: .125rem;
 }
  .BR-MatSelApp__ProfileImage {
-     border: 1px solid #ccc;
      float: left;
-     height: 125px;
-     margin-right: 1rem;
+     padding: .5rem;
+     margin: .25rem 1.5rem 0 0;
      width: 125px;
 }
  .BR-MatSelApp__ProfileDescription {
@@ -399,6 +398,7 @@ body {
     }
     /* When there are exactly 6 boxes being displayed (when chem resistance and adhesion are not there) change the presentation of the More Info box. */
      .BR-MatSelApp__BnumDetails div:nth-last-child(6):first-child ~div.BR-MatSelApp__SubSection--Expanding {
+         display: flex;
          flex-direction: row;
          justify-content: space-between;
     }
@@ -407,5 +407,8 @@ body {
     }
      .BR-MatSelApp__BnumDetails div:nth-last-child(6):first-child ~div.BR-MatSelApp__SubSection--Expanding p {
          margin-bottom: 0;
+    }
+     .BR-MatSelApp__BnumDetails div:nth-last-child(6):first-child ~div.BR-MatSelApp__SubSection--Expanding .BR-MatSelApp__TDSLink {
+          margin-top: .5rem;
     }
 }
